compilers/ID/cool/regression/BASE_cgtest/old_cool/attribute_initialize_incorrect.cl.stderr
./BASE_cgtest/attribute_initialize_incorrect.cl:2: Inferred type Bool of initialization of attribute a does not conform to declared type Int.
Compilation halted due to static semantic errors.
