compilers/ID/cool/regression/BASE_cgtest/old_cool/attribute_initialize_incorrect.cl
class Main is 
   a : Int <- true;
   main() : Int is a end;
end;
